Removed HTML fail.

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is a website, namely <a href="http://www.cardstox.com/">CardStox</a>. It's here so I can edit it all cloud-like and stuff.
+This is a website, namely http://www.cardstox.com/
+
+It's here so I can edit it all cloud-like and stuff.
